remove jcenter and mavenLocal

--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ subprojects {
     version '0.1'
 
     repositories {
-        mavenLocal()
+        // mavenLocal()
         mavenCentral()
-        jcenter()
+        // jcenter()
     }
 
     idea {
